tests/correct/native_func.py
def hello(): native "TEST"

def hello(): 
    native "test" 

