tests/error/def.py
while 10 < 7: 
    def hello():
        print "here"
    hello()
    break
